kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: koleg-api
  labels:
    app: koleg-api
spec:
  selector:
    app: koleg-api
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
