kube/ingress.dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - host: api.dev.koleg.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: koleg-api
            port:
              number: 8080
